Replace node-webkit by atom-shell (first iteration).

--- a/templates/osx/Info.plist.erb
+++ b/templates/osx/Info.plist.erb
@@ -7,7 +7,7 @@
   <key>CFBundleDisplayName</key>
   <string><%= config[:app_name] %></string>
   <key>CFBundleExecutable</key>
-  <string>node-webkit</string>
+  <string>Atom</string>
   <key>CFBundleIconFile</key>
   <string><%= config[:app_osx_icns] %></string>
   <key>CFBundleIdentifier</key>
